--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -9,29 +9,41 @@
   <link rel="stylesheet" href="home.css">
 <!--  유튜브 아이콘-->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 20'><path d='M27.4433 3.12038C27.129 1.89551 26.1331 0.90449 24.902 0.590184C22.716 0 14 0 14 0C14 0 5.284 0 3.09801 0.590184C1.86687 0.90449 0.871033 1.89551 0.556684 3.12038C0 5.3402 0 10 0 10C0 10 0 14.6598 0.556684 16.8796C0.871033 18.1045 1.86687 19.0955 3.09801 19.4098C5.284 20 14 20 14 20C14 20 22.716 20 24.902 19.4098C26.1331 19.0955 27.129 18.1045 27.4433 16.8796C28 14.6598 28 10 28 10C28 10 28 5.3402 27.4433 3.12038Z' fill='%23FF0000'/><path d='M11.1999 14.2857L18.3999 10L11.1999 5.71429V14.2857Z' fill='white'/></svg>">
+<!--  Font Awesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
-<!--Navbar (로고 + 메뉴) -->
-<!--반응형 설정, 색 설정-->
-<nav class="navbar">
-  <div class="hanburger" id="hamburger">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
 
-  <ul>
-    <li><a href="#">홈</a></li>
-    <li><a href="#">구독</a></li>
-    <li><a href="#">시청기록</a></li>
-    <li><a href="#">좋아요 표시한 동영상</a></li>
-    <li><a href="#">오프라인 저장 동영상</a></li>
-  </ul>
-  <a href="#" onclick="location.reload();">
-    <img src="/youtube_logo.png" alt="Youtube 홈">
-  </a>
-</nav>
+<body>
+<!-- 상단바 -->
+<!--left-->
+<header class="topbar">
+  <div class="left">
+    <button class="fas fa-bars" id="menuBtn"></button>
+    <img src="/youtube_logo.png" alt="YouTube Logo" class="logo-img" id="logo-img">
+  </div>
+<!--center-->
+  <div class="center">
+    <input class="search-bar" id="search-bar" type="text" placeholder="검색">
+    <button class="search-btn"><i class="fas fa-search"></i></button>
+    <button class="voice-btn"><i class="fas fa-microphone"></i></button>
+  </div>
+<!--right-->
+  <div class="right">
+    <button class="make-btn">+ 만들기</button>
+    <i class="far fa-bell" style="color: white"></i>
+    <img src="/profile.png" alt="Profile" id="profileimg">
+  </div>
+</header>
+
+<!-- 사이드바 -->
+<!--<nav class="sidebar" id="sidebar">-->
+<!--    <ul>-->
+<!--      <li><i>🏠</i><span>홈</span></li>-->
+<!--      <li><i>🏠</i><span>홈</span></li>-->
+<!--      <li><i>🏠</i><span>홈</span></li>-->
+<!--      <li><i>🏠</i><span>홈</span></li>-->
+<!--    </ul>-->
+<!--</nav>-->
 
 
 
@@ -41,5 +53,6 @@
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="home.js"></script>
 </body>
 </html>
