--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -11,6 +11,8 @@
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 20'><path d='M27.4433 3.12038C27.129 1.89551 26.1331 0.90449 24.902 0.590184C22.716 0 14 0 14 0C14 0 5.284 0 3.09801 0.590184C1.86687 0.90449 0.871033 1.89551 0.556684 3.12038C0 5.3402 0 10 0 10C0 10 0 14.6598 0.556684 16.8796C0.871033 18.1045 1.86687 19.0955 3.09801 19.4098C5.284 20 14 20 14 20C14 20 22.716 20 24.902 19.4098C26.1331 19.0955 27.129 18.1045 27.4433 16.8796C28 14.6598 28 10 28 10C28 10 28 5.3402 27.4433 3.12038Z' fill='%23FF0000'/><path d='M11.1999 14.2857L18.3999 10L11.1999 5.71429V14.2857Z' fill='white'/></svg>">
 <!--  Font Awesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<!--  Material Icons-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -18,32 +20,37 @@
 <!--left-->
 <header class="topbar">
   <div class="left">
-    <button class="fas fa-bars" id="menuBtn"></button>
+    <button class="menu-btn">
+      <i class="fas fa-bars"></i>
+    </button>
     <img src="/youtube_logo.png" alt="YouTube Logo" class="logo-img" id="logo-img">
   </div>
 <!--center-->
   <div class="center">
     <input class="search-bar" id="search-bar" type="text" placeholder="검색">
     <button class="search-btn"><i class="fas fa-search"></i></button>
-    <button class="voice-btn"><i class="fas fa-microphone"></i></button>
+    <button class="voice-btn" title="음성으로 검색">
+      <i class="fas fa-microphone"></i>
+    </button>
   </div>
 <!--right-->
   <div class="right">
     <button class="make-btn">+ 만들기</button>
-    <i class="far fa-bell" style="color: white"></i>
+    <button class="bell-btn" title="알림">
+      <i class="far fa-bell"></i>
+    </button>
     <img src="/profile.png" alt="Profile" id="profileimg">
   </div>
 </header>
 
-<!-- 사이드바 -->
-<!--<nav class="sidebar" id="sidebar">-->
-<!--    <ul>-->
-<!--      <li><i>🏠</i><span>홈</span></li>-->
-<!--      <li><i>🏠</i><span>홈</span></li>-->
-<!--      <li><i>🏠</i><span>홈</span></li>-->
-<!--      <li><i>🏠</i><span>홈</span></li>-->
-<!--    </ul>-->
-<!--</nav>-->
+<!--사이드바-->
+<nav class="sidebar" id="sidebar">
+  <ul>
+    <li><button><span>🏠</span> 홈</button></li>
+    <li><button><span>🏠</span> Shorts</button></li>
+    <li><button><span>🏠</span> 구독</button></li>
+  </ul>
+</nav>
 
 
 
