--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -35,7 +35,7 @@
   </div>
 <!--right-->
   <div class="right">
-    <button class="make-btn">+ 만들기</button>
+    <button class="make-btn">+&nbsp;&nbsp;만들기</button>
     <button class="bell-btn" title="알림">
       <i class="far fa-bell"></i>
     </button>
@@ -49,8 +49,19 @@
     <li><button><span>🏠</span> 홈</button></li>
     <li><button><span>🏠</span> Shorts</button></li>
     <li><button><span>🏠</span> 구독</button></li>
+    <li><button><span>🏠</span> Youtube Music</button></li>
   </ul>
+  <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <ul>
+    <li><button> 내 페이지&nbsp;&nbsp;&nbsp;&nbsp;></button></li>
+    <li><button><span>🏠</span> 홈</button></li>
+    <li><button><span>🏠</span> Shorts</button></li>
+    <li><button><span>🏠</span> 구독</button></li>
+    <li><button><span>🏠</span> Youtube Music</button></li>
+  </ul>
+  <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
 </nav>
+
 
 
 
