feat : add sidebar2 commit

--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -43,24 +43,57 @@
   </div>
 </header>
 
-<!--사이드바-->
+<!--사이드바v1-->
 <nav class="sidebar" id="sidebar">
+  <!--사이드바1-->
   <ul>
-    <li><button><span>🏠</span> 홈</button></li>
-    <li><button><span>🏠</span> Shorts</button></li>
-    <li><button><span>🏠</span> 구독</button></li>
-    <li><button><span>🏠</span> Youtube Music</button></li>
+    <li><button><i class="fas fa-home"></i>홈</button></li>
+    <li><button><i class="fas fa-bolt"></i> Shorts</button></li>
+    <li><button><i class="fas fa-folder-open"></i> 구독</button></li>
+    <li><button><i class="fas fa-music"></i> Youtube Music</button></li>
   </ul>
   <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <!--사이드바2-->
   <ul>
     <li><button> 내 페이지&nbsp;&nbsp;&nbsp;&nbsp;></button></li>
-    <li><button><span>🏠</span> 홈</button></li>
-    <li><button><span>🏠</span> Shorts</button></li>
-    <li><button><span>🏠</span> 구독</button></li>
-    <li><button><span>🏠</span> Youtube Music</button></li>
+    <li><button><i class="fas fa-clock"></i> 시청기록</button></li>
+    <li><button><span>🏠</span> 재생목록</button></li>
+    <li><button><span>🏠</span> 내 동영상</button></li>
+    <li><button><span>🏠</span> 내 영화</button></li>
+    <li><button><span>🏠</span> 나중에 볼 동영상</button></li>
+    <li><button><span>🏠</span> 좋아요 표시한 동영상</button></li>
+    <li><button><i class="fas fa-download"></i> 오프라인 저장 동영상</button></li>
   </ul>
   <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <!--사이드바3-->
+  <ul>
+    <li><span></span>&nbsp;&nbsp;구독</li>
+    <li><button><span>(채널아이콘)</span> 머독<img class="stream" src="/stream.png"></button></li>
+    <li><button><span>(채널아이콘)</span> 파카<img class="stream" src="/stream.png"></button></li>
+    <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
+    <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
+    <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
+    <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
+  </ul>
 </nav>
+
+<!--사이드바v2-->
+<nav class="sidebar2">
+  <div class="sidebar2-group">
+    <button class="sidebar2-btn"><i class="fas fa-home"></i><span>홈</span></button>
+    <button class="sidebar2-btn"><i class="fas fa-bolt"></i><span>Shorts</span></button>
+    <button class="sidebar2-btn"><i class="fas fa-folder-open"></i><span>구독</span></button>
+    <button class="sidebar2-btn"><i class="fas fa-music"></i><span>YouTube Music</span></button>
+  </div>
+
+  <div class="sidebar-group">
+    <button class="sidebar2-btn"><i class="fas fa-user"></i><span>내 페이지</span></button>
+    <button class="sidebar2-btn"><i class="fas fa-clock"></i><span>시청 기록</span></button>
+    <button class="sidebar2-btn"><i class="fas fa-download"></i><span>오프라인 저장</span></button>
+  </div>
+</nav>
+
+
 
 
 
