docs : add text's html,css commit

--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -67,7 +67,7 @@
   <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
   <!--사이드바3-->
   <ul>
-    <li><span></span>&nbsp;&nbsp;구독</li>
+    <li style="margin-bottom: 5px">&nbsp;&nbsp;구독</li>
     <li><button><span>(채널아이콘)</span> 머독<img class="stream" src="/stream.png"></button></li>
     <li><button><span>(채널아이콘)</span> 파카<img class="stream" src="/stream.png"></button></li>
     <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
