refactor : update button icon commit

--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -57,11 +57,11 @@
   <ul>
     <li><button> 내 페이지&nbsp;&nbsp;&nbsp;&nbsp;></button></li>
     <li><button><i class="fas fa-clock"></i> 시청기록</button></li>
-    <li><button><span>🏠</span> 재생목록</button></li>
-    <li><button><span>🏠</span> 내 동영상</button></li>
-    <li><button><span>🏠</span> 내 영화</button></li>
-    <li><button><span>🏠</span> 나중에 볼 동영상</button></li>
-    <li><button><span>🏠</span> 좋아요 표시한 동영상</button></li>
+    <li><button><i class="fas fa-list"></i>재생목록</button></li>
+    <li><button><i class="fas fa-video"></i> 내 동영상</button></li>
+    <li><button><i class="fas fa-film"></i> 내 영화</button></li>
+    <li><button><i class="fas fa-clock"></i> 나중에 볼 동영상</button></li>
+    <li><button><i class="fas fa-thumbs-up"></i> 좋아요 표시한 동영상</button></li>
     <li><button><i class="fas fa-download"></i> 오프라인 저장 동영상</button></li>
   </ul>
   <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
@@ -86,14 +86,14 @@
     <button class="sidebar2-btn"><i class="fas fa-music"></i><span>YouTube Music</span></button>
   </div>
 
-  <div class="sidebar-group">
+  <div class="sidebar2-group">
     <button class="sidebar2-btn"><i class="fas fa-user"></i><span>내 페이지</span></button>
     <button class="sidebar2-btn"><i class="fas fa-clock"></i><span>시청 기록</span></button>
     <button class="sidebar2-btn"><i class="fas fa-download"></i><span>오프라인 저장</span></button>
   </div>
 </nav>
 
-
+<!--메인 콘텐츠-->
 
 
 
