--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -94,7 +94,9 @@
 </nav>
 
 <!--메인 콘텐츠-->
-
+<main>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Y90uO6SG5WE?si=4Tbap0euYwP2hO4N" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</main>
 
 
 
