refactor : sidebar update commit

--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<!-- 상단바 -->
+<!-- (공통)상단바 -->
 <!--left-->
 <header class="topbar">
   <div class="left">
@@ -48,7 +48,7 @@
          <li style="display: flex"><img src="home_img/profile.png" alt="Profile" class="dropdownProfile"><p style="margin-top: 25px; margin-left: 10px">정인웅</p></li>
          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
          <li><a href="#"><i class="fab fa-google"></i>Google 계정</a></li>
-         <li><a href="#"><i class="fas fa-user-circle"></i>계정 전환&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a></li>
+         <li><a href="#"><i class="fas fa-user-circle"></i>계정 전환</a></li>
          <li><a href="#"><i class="fas fa-sign-out-alt"></i>로그아웃</a></li>
          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
          <li><a href="#"><i class="fas fa-video"></i>YouTube 스튜디오</a></li>
@@ -56,9 +56,9 @@
          <li><a href="#"><i class="fas fa-shopping-bag"></i>구매 항목 및 맴버십</a></li>
          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
          <li><a href="#"><i class="fas fa-database"></i>Youtube의 내 데이터</a></li>
-         <li><a href="#"><i class="fas fa-palette"></i>디자인: 기기 테마&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a></li>
-         <li><a href="#"><i class="fas fa-language"></i>언어: 한국어&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a></li>
-         <li><a href="#"><i class="fas fa-eye-slash"></i>제한 모드: 사용 안함&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;></a></li>
+         <li><a href="#"><i class="fas fa-palette"></i>디자인: 기기 테마</a></li>
+         <li><a href="#"><i class="fas fa-language"></i>언어: 한국어</a></li>
+         <li><a href="#"><i class="fas fa-eye-slash"></i>제한 모드: 사용 안함</a></li>
          <li><a href="#"><i class="fas fa-map-marker-alt"></i>위치: 한국</a></li>
          <li><a href="#"><i class="fas fa-keyboard"></i>단축키</a></li>
          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
@@ -98,12 +98,12 @@
   <!--사이드바3-->
   <ul>
     <li style="margin-bottom: 5px">&nbsp;&nbsp;구독</li>
-    <li><button><span>(채널아이콘)</span> 머독<img class="stream" src="/stream.png"></button></li>
-    <li><button><span>(채널아이콘)</span> 파카<img class="stream" src="/stream.png"></button></li>
-    <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
-    <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
-    <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
-    <li><button><span>(채널아이콘)</span> 김도<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="home_img/channel_img/5-c.jpg" alt=""> 랄로1<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="home_img/channel_img/5-c.jpg" alt=""> 랄로2<!--<img class="stream" src="/stream.png">--></button></li>
+    <li><button><img src="home_img/channel_img/5-c.jpg" alt=""> 랄로3<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="home_img/channel_img/5-c.jpg" alt="">랄로4<!--<img class="stream" src="/stream.png">--></button></li>
+    <li><button><img src="home_img/channel_img/5-c.jpg" alt=""> 랄로5<img class="stream" src="/stream.png"></button></li>
+    <li><button><<img src="home_img/channel_img/5-c.jpg" alt=""> 랄로6<!--<img class="stream" src="/stream.png">--></button></li>
   </ul>
 </nav>
 
