--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<!-- (공통)상단바 -->
+<!-- 상단바 -->
 <!--left-->
 <header class="topbar">
   <div class="left">
@@ -25,7 +25,7 @@
     </button>
     <img src="/youtube_logo.png" alt="YouTube Logo" class="logo-img" id="logo-img">
   </div>
-<!--center-->
+  <!--center-->
   <div class="center">
     <input class="search-bar" id="search-bar" type="text" placeholder="검색">
     <button class="search-btn"><i class="fas fa-search"></i></button>
@@ -33,7 +33,7 @@
       <i class="fas fa-microphone"></i>
     </button>
   </div>
-<!--right-->
+  <!--right-->
   <div class="right">
     <button class="make-btn">+&nbsp;&nbsp;만들기</button>
     <button class="bell-btn" title="알림">
@@ -41,33 +41,33 @@
     </button>
 
     <div class="profile-wrapper">
-      <img src="home_img/profile.png" alt="Profile" class="profileimg" id="profile-img">
+      <img src="profile.png" alt="Profile" class="profileimg" id="profile-img">
       <!--    프로필 드롭다운 메뉴-->
-     <div class="dropdown" id="dropdownMenu">
-       <ul>
-         <li style="display: flex"><img src="home_img/profile.png" alt="Profile" class="dropdownProfile"><p style="margin-top: 25px; margin-left: 10px">정인웅</p></li>
-         <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
-         <li><a href="#"><i class="fab fa-google"></i>Google 계정</a></li>
-         <li><a href="#"><i class="fas fa-user-circle"></i>계정 전환</a></li>
-         <li><a href="#"><i class="fas fa-sign-out-alt"></i>로그아웃</a></li>
-         <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
-         <li><a href="#"><i class="fas fa-video"></i>YouTube 스튜디오</a></li>
-         <li><a href="#"><i class="fas fa-gem"></i>내 Premium 혜택</a></li>
-         <li><a href="#"><i class="fas fa-shopping-bag"></i>구매 항목 및 맴버십</a></li>
-         <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
-         <li><a href="#"><i class="fas fa-database"></i>Youtube의 내 데이터</a></li>
-         <li><a href="#"><i class="fas fa-palette"></i>디자인: 기기 테마</a></li>
-         <li><a href="#"><i class="fas fa-language"></i>언어: 한국어</a></li>
-         <li><a href="#"><i class="fas fa-eye-slash"></i>제한 모드: 사용 안함</a></li>
-         <li><a href="#"><i class="fas fa-map-marker-alt"></i>위치: 한국</a></li>
-         <li><a href="#"><i class="fas fa-keyboard"></i>단축키</a></li>
-         <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
-         <li><a href="#"><i class="fas fa-cog"></i>설정</a></li>
-         <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
-         <li><a href="#"><i class="fas fa-question-circle"></i>고객센터</a></li>
-         <li><a href="#"><i class="fas fa-comment-dots"></i>의견 보내기</a></li>
-       </ul>
-     </div>
+      <div class="dropdown" id="dropdownMenu">
+        <ul>
+          <li style="display: flex"><img src="profile.png" alt="Profile" class="dropdownProfile"><p style="margin-top: 25px; margin-left: 10px">정인웅</p></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fab fa-google"></i>Google 계정</a></li>
+          <li><a href="#"><i class="fas fa-user-circle"></i>계정 전환</a></li>
+          <li><a href="#"><i class="fas fa-sign-out-alt"></i>로그아웃</a></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fas fa-video"></i>YouTube 스튜디오</a></li>
+          <li><a href="#"><i class="fas fa-gem"></i>내 Premium 혜택</a></li>
+          <li><a href="#"><i class="fas fa-shopping-bag"></i>구매 항목 및 맴버십</a></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fas fa-database"></i>Youtube의 내 데이터</a></li>
+          <li><a href="#"><i class="fas fa-palette"></i>디자인: 기기 테마</a></li>
+          <li><a href="#"><i class="fas fa-language"></i>언어: 한국어</a></li>
+          <li><a href="#"><i class="fas fa-eye-slash"></i>제한 모드: 사용 안함</a></li>
+          <li><a href="#"><i class="fas fa-map-marker-alt"></i>위치: 한국</a></li>
+          <li><a href="#"><i class="fas fa-keyboard"></i>단축키</a></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fas fa-cog"></i>설정</a></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fas fa-question-circle"></i>고객센터</a></li>
+          <li><a href="#"><i class="fas fa-comment-dots"></i>의견 보내기</a></li>
+        </ul>
+      </div>
     </div>
 
   </div>
@@ -221,10 +221,6 @@
       </div>
     </div>
   </div>
-
-
-
-
 </main>
 
 
