feat: shorts update commit

--- a/Project/Home/shorts.html
+++ b/Project/Home/shorts.html
@@ -4,17 +4,11 @@
   <meta charset="UTF-8">
   <title>Title</title>
   <link rel="stylesheet" href="home.css">
-  <style>
-    iframe {
-      border: 1px solid white;
-      border-radius: 10px;
-    }
-  </style>
 </head>
 <body>
   <main>
     <div style="display: flex; justify-content: center; align-items: center; width: 100%">
-      <iframe allowfullscreen="" frameborder="0" height="560" src="https://www.youtube.com/embed/qwavKPjcfu8" title="YouTube video player" width="315">
+      <iframe class="shorts" allowfullscreen="" frameborder="0" height="560" src="https://www.youtube.com/embed/qwavKPjcfu8" title="YouTube video player" width="315">
     </iframe>
     </div>
   </main>
