feat: change html's tag, css option commit

--- a/Project/Home/home.html
+++ b/Project/Home/home.html
@@ -14,6 +14,7 @@
 <!--  Material Icons-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="subscribe.css">
+  <link rel="stylesheet" href="shorts.css">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
     <button class="menu-btn">
       <i class="fas fa-bars"></i>
     </button>
-    <img src="/youtube_logo.png" alt="YouTube Logo" class="logo-img" id="logo-img">
+    <img onclick="location.href='home.html'" src="/youtube_logo.png" alt="YouTube Logo" class="logo-img" id="logo-img">
   </div>
   <!--center-->
   <div class="center">
@@ -127,6 +128,7 @@
 <!--메인 콘텐츠(리스트 페이지)-->
 <main id="main-container">
 <!--  썸네일 리스트1-->
+  <a href="../Video/video.html">
   <div class="content">
     <img class="thumbnail" src="home_img/thumbnail_img/1.png" alt="썸네일 사진">
     <div class="video-meta">
@@ -138,7 +140,9 @@
       </div>
     </div>
   </div>
+  </a>
   <!--  썸네일 리스트2-->
+  <a href="#">
   <div class="content">
     <img class="thumbnail" src="home_img/thumbnail_img/2.png" alt="썸네일 사진">
     <div class="video-meta">
@@ -150,7 +154,9 @@
       </div>
     </div>
   </div>
+  </a>
   <!--  썸네일 리스트3-->
+  <a href="#">
   <div class="content">
     <img class="thumbnail" src="home_img/thumbnail_img/3.png" alt="썸네일 사진">
     <div class="video-meta">
@@ -162,7 +168,9 @@
       </div>
     </div>
   </div>
+  </a>
   <!--  썸네일 리스트4-->
+  <a href="#">
   <div class="content">
     <img class="thumbnail" src="home_img/thumbnail_img/4.png" alt="썸네일 사진">
     <div class="video-meta">
@@ -174,7 +182,9 @@
       </div>
     </div>
   </div>
+  </a>
   <!--  썸네일 리스트5-->
+  <a href="#">
   <div class="content">
     <img class="thumbnail" src="home_img/thumbnail_img/5.png" alt="썸네일 사진">
     <div class="video-meta">
@@ -186,7 +196,9 @@
       </div>
     </div>
   </div>
+  </a>
   <!--  썸네일 리스트6-->
+  <a href="#">
   <div class="content">
     <img class="thumbnail" src="home_img/thumbnail_img/6.png" alt="썸네일 사진">
     <div class="video-meta">
@@ -198,7 +210,9 @@
       </div>
     </div>
   </div>
+  </a>
   <!--  썸네일 리스트7-->
+  <a href="#">
   <div class="content">
     <img class="thumbnail" src="home_img/thumbnail_img/7.png" alt="썸네일 사진">
     <div class="video-meta">
@@ -210,7 +224,9 @@
       </div>
     </div>
   </div>
+  </a>
   <!--  썸네일 리스트8-->
+  <a href="#">
   <div class="content">
     <img class="thumbnail" src="home_img/thumbnail_img/8.png" alt="썸네일 사진">
     <div class="video-meta">
@@ -222,6 +238,7 @@
       </div>
     </div>
   </div>
+  </a>
 </main>
 
 
