--- a/index.html
+++ b/index.html
@@ -1,33 +1,249 @@
 <!doctype html>
-<html class="no-js" lang="">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css">
-  <meta name="description" content="">
-
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
-  <meta property="og:image:alt" content="">
-
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" href="/icon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="icon.png">
-
-  <link rel="manifest" href="site.webmanifest">
-  <meta name="theme-color" content="#fafafa">
+  <title>Youtube</title>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="Project/Home/css/home.css">
+<!--  유튜브 아이콘-->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 28 20'><path d='M27.4433 3.12038C27.129 1.89551 26.1331 0.90449 24.902 0.590184C22.716 0 14 0 14 0C14 0 5.284 0 3.09801 0.590184C1.86687 0.90449 0.871033 1.89551 0.556684 3.12038C0 5.3402 0 10 0 10C0 10 0 14.6598 0.556684 16.8796C0.871033 18.1045 1.86687 19.0955 3.09801 19.4098C5.284 20 14 20 14 20C14 20 22.716 20 24.902 19.4098C26.1331 19.0955 27.129 18.1045 27.4433 16.8796C28 14.6598 28 10 28 10C28 10 28 5.3402 27.4433 3.12038Z' fill='%23FF0000'/><path d='M11.1999 14.2857L18.3999 10L11.1999 5.71429V14.2857Z' fill='white'/></svg>">
+<!--  Font Awesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+<!--  Material Icons-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="Project/Home/css/subscribe.css">
+  <link rel="stylesheet" href="Project/Home/css/shorts.css">
 </head>
 
 <body>
+<!-- 상단바 -->
+<!--left-->
+<header class="topbar">
+  <div class="left">
+    <button class="menu-btn">
+      <i class="fas fa-bars"></i>
+    </button>
+    <img onclick="location.href='home.html'" src="/youtube_logo.png" alt="YouTube Logo" class="logo-img" id="logo-img">
+  </div>
+  <!--center-->
+  <div class="center">
+    <input class="search-bar" id="search-bar" type="text" placeholder="검색">
+    <button class="search-btn"><i class="fas fa-search"></i></button>
+    <button class="voice-btn" title="음성으로 검색">
+      <i class="fas fa-microphone"></i>
+    </button>
+  </div>
+  <!--right-->
+  <div class="right">
+    <button class="make-btn">+&nbsp;&nbsp;만들기</button>
+    <button class="bell-btn" title="알림">
+      <i class="far fa-bell"></i>
+    </button>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+    <div class="profile-wrapper">
+      <img src="Project/Video/video_img/profile.png" alt="Profile" class="profileimg" id="profile-img">
+      <!--    프로필 드롭다운 메뉴-->
+      <div class="dropdown" id="dropdownMenu">
+        <ul>
+          <li style="display: flex"><img src="Project/Video/video_img/profile.png" alt="Profile" class="dropdownProfile"><p style="margin-top: 25px; margin-left: 10px">정인웅</p></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fab fa-google"></i>Google 계정</a></li>
+          <li><a href="#"><i class="fas fa-user-circle"></i>계정 전환</a></li>
+          <li><a href="#"><i class="fas fa-sign-out-alt"></i>로그아웃</a></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fas fa-video"></i>YouTube 스튜디오</a></li>
+          <li><a href="#"><i class="fas fa-gem"></i>내 Premium 혜택</a></li>
+          <li><a href="#"><i class="fas fa-shopping-bag"></i>구매 항목 및 맴버십</a></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fas fa-database"></i>Youtube의 내 데이터</a></li>
+          <li><a href="#"><i class="fas fa-palette"></i>디자인: 기기 테마</a></li>
+          <li><a href="#"><i class="fas fa-language"></i>언어: 한국어</a></li>
+          <li><a href="#"><i class="fas fa-eye-slash"></i>제한 모드: 사용 안함</a></li>
+          <li><a href="#"><i class="fas fa-map-marker-alt"></i>위치: 한국</a></li>
+          <li><a href="#"><i class="fas fa-keyboard"></i>단축키</a></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fas fa-cog"></i>설정</a></li>
+          <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+          <li><a href="#"><i class="fas fa-question-circle"></i>고객센터</a></li>
+          <li><a href="#"><i class="fas fa-comment-dots"></i>의견 보내기</a></li>
+        </ul>
+      </div>
+    </div>
 
+  </div>
+</header>
+
+<!--사이드바v1-->
+<nav class="sidebar active" id="sidebar">
+  <!--사이드바1-->
+  <ul>
+    <li><button onclick="location.href='home.html'"><i class="fas fa-home"></i>홈</button></li>
+    <li><button id="shorts-btn1"><i class="fas fa-bolt"></i> Shorts</button></li>
+    <li><button id="subscribe-btn1"><i class="fas fa-folder-open"></i> 구독</button></li>
+    <li><button><i class="fas fa-music"></i> Youtube Music</button></li>
+  </ul>
+  <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <!--사이드바2-->
+  <ul>
+    <li><button > 내 페이지&nbsp;&nbsp;&nbsp;&nbsp;></button></li>
+    <li><button ><i class="fas fa-clock"></i> 시청기록</button></li>
+    <li><button ><i class="fas fa-list"></i>재생목록</button></li>
+    <li><button ><i class="fas fa-video"></i> 내 동영상</button></li>
+    <li><button ><i class="fas fa-film"></i> 내 영화</button></li>
+    <li><button ><i class="fas fa-clock"></i> 나중에 볼 동영상</button></li>
+    <li><button ><i class="fas fa-thumbs-up"></i> 좋아요 표시한 동영상</button></li>
+    <li><button ><i class="fas fa-download"></i> 오프라인 저장 동영상</button></li>
+  </ul>
+  <hr style="border: 0; border-top: 1px solid #888; margin: 16px 0;" />
+  <!--사이드바3-->
+  <ul>
+    <li style="margin-bottom: 5px">&nbsp;&nbsp;구독</li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 1<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 2<!--<img class="stream" src="/stream.png">--></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 3<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 4<!--<img class="stream" src="/stream.png">--></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 5<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 6<!--<img class="stream" src="/stream.png">--></button></li>
+  </ul>
+</nav>
+
+<!--사이드바v2-->
+<nav class="sidebar2 active">
+  <div class="sidebar2-group">
+    <button class="sidebar2-btn" onclick="location.href='home.html'"><i class="fas fa-home"></i><span>홈</span></button>
+    <button class="sidebar2-btn" id="shorts-btn2"><i class="fas fa-bolt"></i><span>Shorts</span></button>
+    <button class="sidebar2-btn" id="subscribe-btn2"><i class="fas fa-folder-open"></i><span>구독</span></button>
+    <button class="sidebar2-btn"><i class="fas fa-music"></i><span>YouTube Music</span></button>
+  </div>
+
+  <div class="sidebar2-group active">
+    <button class="sidebar2-btn"><i class="fas fa-user"></i><span>내 페이지</span></button>
+    <button class="sidebar2-btn"><i class="fas fa-clock"></i><span>시청 기록</span></button>
+    <button class="sidebar2-btn"><i class="fas fa-download"></i><span>오프라인 저장</span></button>
+  </div>
+</nav>
+
+<!--메인 콘텐츠(리스트 페이지)-->
+<main id="main-container">
+<!--  썸네일 리스트1-->
+  <a href="Project/Video/page/thumbnail1.html">
+  <div class="content">
+    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/1.png" alt="썸네일 사진">
+    <div class="video-meta">
+      <img class="producer-img" src="Project/Home/home_img/channel_img/1-c.jpg" alt="작성자">
+      <div class="video-info">
+        <p class="video-title">배말랭 옥천 집에 흑염소 풀기ㅋㅋㅋ</p>
+        <p class="video-producer">핫소스</p>
+        <p class="video-update">조회수 61만회 · 9일전</p>
+      </div>
+    </div>
+  </div>
+  </a>
+  <!--  썸네일 리스트2-->
+  <a href="Project/Video/page/thumbnail2.html">
+  <div class="content">
+    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/2.png" alt="썸네일 사진">
+    <div class="video-meta">
+      <img class="producer-img" src="Project/Home/home_img/channel_img/2-c.jpg" alt="작성자">
+      <div class="video-info">
+        <p class="video-title">휴가 복귀 3시간 전</p>
+        <p class="video-producer">숏박스</p>
+        <p class="video-update">조회수 774만회 · 7개월 전</p>
+      </div>
+    </div>
+  </div>
+  </a>
+  <!--  썸네일 리스트3-->
+  <a href="Project/Video/page/thumbnail3.html">
+  <div class="content">
+    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/3.png" alt="썸네일 사진">
+    <div class="video-meta">
+      <img class="producer-img" src="Project/Home/home_img/channel_img/3-c.jpg" alt="작성자">
+      <div class="video-info">
+        <p class="video-title">(실제 거장이 만든) 예술적인 방탈출 게임</p>
+        <p class="video-producer">우주하마</p>
+        <p class="video-update">조회수 8.8만회 · 1일 전</p>
+      </div>
+    </div>
+  </div>
+  </a>
+  <!--  썸네일 리스트4-->
+  <a href="Project/Video/page/thumbnail4.html">
+  <div class="content">
+    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/4.png" alt="썸네일 사진">
+    <div class="video-meta">
+      <img class="producer-img" src="Project/Home/home_img/channel_img/4-c.jpg" alt="작성자">
+      <div class="video-info">
+        <p class="video-title">나처럼 생긴 사람이 많은 나라 여행기 [뉴욕1]</p>
+        <p class="video-producer">레오티비 LEOTV</p>
+        <p class="video-update">조회수 18만회 · 1일 전</p>
+      </div>
+    </div>
+  </div>
+  </a>
+  <!--  썸네일 리스트5-->
+  <a href="Project/Video/page/thumbnail5.html">
+  <div class="content">
+    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/5.png" alt="썸네일 사진">
+    <div class="video-meta">
+      <img class="producer-img" src="Project/Home/home_img/channel_img/5-c.jpg" alt="작성자">
+      <div class="video-info">
+        <p class="video-title">진실을 파헤치겠습니다</p>
+        <p class="video-producer">랄로</p>
+        <p class="video-update">조회수 95만회 · 4일 전</p>
+      </div>
+    </div>
+  </div>
+  </a>
+  <!--  썸네일 리스트6-->
+  <a href="Project/Video/page/thumbnail6.html">
+  <div class="content">
+    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/6.png" alt="썸네일 사진">
+    <div class="video-meta">
+      <img class="producer-img" src="Project/Home/home_img/channel_img/6-c.jpg" alt="작성자">
+      <div class="video-info">
+        <p class="video-title">디저트 1타강사 아조씨의 최애 맛집 (ft.아저씨 시사 교양)</p>
+        <p class="video-producer">추성훈 ChooSungHoon</p>
+        <p class="video-update">조회수 73만회 · 5일 전</p>
+      </div>
+    </div>
+  </div>
+  </a>
+  <!--  썸네일 리스트7-->
+  <a href="Project/Video/page/thumbnail7.html">
+  <div class="content">
+    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/7.png" alt="썸네일 사진">
+    <div class="video-meta">
+      <img class="producer-img" src="Project/Home/home_img/channel_img/7-c.jpg" alt="작성자">
+      <div class="video-info">
+        <p class="video-title">이제 대세는 CLaude Code!? 찐 꿀팁 대방출🔥</p>
+        <p class="video-producer">노마드 코더 Nomad Coders</p>
+        <p class="video-update">조회수 3.5만회 · 2일 전</p>
+      </div>
+    </div>
+  </div>
+  </a>
+  <!--  썸네일 리스트8-->
+  <a href="Project/Video/page/thumbnail8.html">
+  <div class="content">
+    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/8.png" alt="썸네일 사진">
+    <div class="video-meta">
+      <img class="producer-img" src="Project/Home/home_img/channel_img/8-c.jpg" alt="작성자">
+      <div class="video-info">
+        <p class="video-title">wait...you like lofi hip-hop?</p>
+        <p class="video-producer">the bootleg boy</p>
+        <p class="video-update">조회수 1만회 · 7일 전</p>
+      </div>
+    </div>
+  </div>
+  </a>
+</main>
+
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="Project/Home/js/home.js"></script>
 </body>
-
 </html>
