refactor: 경로 수정 commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <button class="menu-btn">
       <i class="fas fa-bars"></i>
     </button>
-    <img onclick="location.href='home.html'" src="/youtube_logo.png" alt="YouTube Logo" class="logo-img" id="logo-img">
+    <img onclick="location.href='index.html'" src="youtube_logo.png" alt="YouTube Logo" class="logo-img" id="logo-img">
   </div>
   <!--center-->
   <div class="center">
@@ -79,7 +79,7 @@
 <nav class="sidebar active" id="sidebar">
   <!--사이드바1-->
   <ul>
-    <li><button onclick="location.href='home.html'"><i class="fas fa-home"></i>홈</button></li>
+    <li><button onclick="location.href='index.html'"><i class="fas fa-home"></i>홈</button></li>
     <li><button id="shorts-btn1"><i class="fas fa-bolt"></i> Shorts</button></li>
     <li><button id="subscribe-btn1"><i class="fas fa-folder-open"></i> 구독</button></li>
     <li><button><i class="fas fa-music"></i> Youtube Music</button></li>
@@ -100,11 +100,11 @@
   <!--사이드바3-->
   <ul>
     <li style="margin-bottom: 5px">&nbsp;&nbsp;구독</li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 1<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 1<img class="stream" src="stream.png"></button></li>
     <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 2<!--<img class="stream" src="/stream.png">--></button></li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 3<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 3<img class="stream" src="stream.png"></button></li>
     <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 4<!--<img class="stream" src="/stream.png">--></button></li>
-    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 5<img class="stream" src="/stream.png"></button></li>
+    <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 5<img class="stream" src="stream.png"></button></li>
     <li><button><img src="Project/Home/home_img/channel_img/5-c.jpg" alt=""> 6<!--<img class="stream" src="/stream.png">--></button></li>
   </ul>
 </nav>
