docs: 파일 이동 commit

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <!--사이드바v2-->
 <nav class="sidebar2 active">
   <div class="sidebar2-group">
-    <button class="sidebar2-btn" onclick="location.href='home.html'"><i class="fas fa-home"></i><span>홈</span></button>
+    <button class="sidebar2-btn" onclick="location.href='index.html'"><i class="fas fa-home"></i><span>홈</span></button>
     <button class="sidebar2-btn" id="shorts-btn2"><i class="fas fa-bolt"></i><span>Shorts</span></button>
     <button class="sidebar2-btn" id="subscribe-btn2"><i class="fas fa-folder-open"></i><span>구독</span></button>
     <button class="sidebar2-btn"><i class="fas fa-music"></i><span>YouTube Music</span></button>
