--- a/shorts.html
+++ b/shorts.html
@@ -5,7 +5,7 @@
   <title>Title</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="../css/home.css">
+  <link rel="stylesheet" href="Project/Home/css/home.css">
 </head>
 <body>
   <main>
