--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
 <!--메인 콘텐츠(리스트 페이지)-->
 <main id="main-container">
 <!--  썸네일 리스트1-->
-  <div class="content">
+
+  <div class="content" data-id="1">
     <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/1.png" alt="썸네일 사진">
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/1-c.jpg" alt="작성자">
