--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   </div>
 
   <!--  썸네일 리스트2-->
-  <div class="content">
+  <div class="content" data-id="2">
     <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/2.png" alt="썸네일 사진">
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/2-c.jpg" alt="작성자">
@@ -155,7 +155,7 @@
   </div>
 
   <!--  썸네일 리스트3-->
-  <div class="content">
+  <div class="content" data-id="3">
     <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/3.png" alt="썸네일 사진">
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/3-c.jpg" alt="작성자">
@@ -169,7 +169,7 @@
 
   <!--  썸네일 리스트4-->
 
-  <div class="content">
+  <div class="content" data-id="4">
     <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/4.png" alt="썸네일 사진">
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/4-c.jpg" alt="작성자">
@@ -183,7 +183,7 @@
 
   <!--  썸네일 리스트5-->
 
-  <div class="content">
+  <div class="content" data-id="5">
     <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/5.png" alt="썸네일 사진">
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/5-c.jpg" alt="작성자">
@@ -197,7 +197,7 @@
 
   <!--  썸네일 리스트6-->
 
-  <div class="content">
+  <div class="content" data-id="6">
     <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/6.png" alt="썸네일 사진">
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/6-c.jpg" alt="작성자">
@@ -211,7 +211,7 @@
 
   <!--  썸네일 리스트7-->
 
-  <div class="content">
+  <div class="content" data-id="7">
     <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/7.png" alt="썸네일 사진">
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/7-c.jpg" alt="작성자">
@@ -225,7 +225,7 @@
 
   <!--  썸네일 리스트8-->
 
-  <div class="content">
+  <div class="content" data-id="8">
     <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/8.png" alt="썸네일 사진">
     <div class="video-meta">
       <img class="producer-img" src="Project/Home/home_img/channel_img/8-c.jpg" alt="작성자">
