feat: 구독 페이지 구현 update commit

--- a/subscribe.html
+++ b/subscribe.html
@@ -15,122 +15,135 @@
   <!-- main 상단바-->
   <div class="menu-bar">
     <div class="left-menu">
-      <span>최신순</span>
+      <p id="maintop1">최신순</p>
+      <p id="maintop2">모든 구독 채널</p>
     </div>
     <div class="right-menu">
-      <button class="rm-btn"><span>관리</span></button>
+      <button class="rm-btn" id="manage-btn"><p style="margin-bottom: 0">관리</p></button>
       <button class="list-btn"><i class="fas fa-th"></i></button>
       <button class="list-btn"><i class="fas fa-bars"></i></button>
     </div>
   </div>
   <!--  썸네일 리스트1-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/1-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/1-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">무효!!!!!!!!</p>
-        <p class="video-producer">랄로</p>
-        <p class="video-update">조회수 48만회 · 12시간 전</p>
+    <div class="content" >
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/moon-nell.png" alt="썸네일 사진">
+      <div class="video-meta">
+        <img class="producer-img" src="Project/Home/home_img/channel_img/sub-nell.jpg" alt="작성자">
+        <div class="video-info">
+          <p class="video-title">넬(NELL) 'Moon Shower' Digital Art Film</p>
+          <p class="video-producer">OFFICIAL_NELL</p>
+          <p class="video-update">조회수 10만회 · 1년 전</p>
+        </div>
       </div>
     </div>
-  </div>
-  <!--  썸네일 리스트2-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/2-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/2-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">갯벌에 친구 1억 짜리 리자몽 카드 묻기 ㅋㅋ</p>
-        <p class="video-producer">핫소스</p>
-        <p class="video-update">조회수 32만회 · 13시간 전</p>
+    <!--  썸네일 리스트2-->
+    <div class="content" >
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/lost-bring.png" alt="썸네일 사진">
+      <div class="video-meta">
+        <img class="producer-img" src="Project/Home/home_img/channel_img/sub-bring.jpg" alt="작성자">
+        <div class="video-info">
+          <p class="video-title">Bring Me The Horizon - LosT (Lyric Video)</p>
+          <p class="video-producer">Bring Me The Horizon</p>
+          <p class="video-update">조회수 578만회 · 1년 전</p>
+        </div>
       </div>
     </div>
-  </div>
-  <!--  썸네일 리스트3-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/3-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/3-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">찐친들과 캠핑간다!! 삼겹살에 비빔면 준비해라!!!!!!!</p>
-        <p class="video-producer">파뿌리</p>
-        <p class="video-update">조회수 17만회 · 16시간 전</p>
+    <!--  썸네일 리스트3-->
+    <div class="content" >
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/kool-bring.png" alt="썸네일 사진">
+      <div class="video-meta">
+        <img class="producer-img" src="Project/Home/home_img/channel_img/sub-bring.jpg" alt="작성자">
+        <div class="video-info">
+          <p class="video-title">Bring Me The Horizon - Kool-Aid (Lyric Video)</p>
+          <p class="video-producer">Bring Me The Horizon</p>
+          <p class="video-update">조회수 963만회 · 1년 전</p>
+        </div>
       </div>
     </div>
-  </div>
-  <!--  썸네일 리스트4-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/1-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/1-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">무효!!!!!!!!</p>
-        <p class="video-producer">랄로</p>
-        <p class="video-update">조회수 48만회 · 12시간 전</p>
+    <!--  썸네일 리스트4-->
+    <div class="content" >
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/itch-not.png" alt="썸네일 사진">
+      <div class="video-meta">
+        <img class="producer-img" src="Project/Home/home_img/channel_img/sub-not.jpg" alt="작성자">
+        <div class="video-info">
+          <p class="video-title">Nothing But Thieves - Itch (II (Visualiser))</p>
+          <p class="video-producer">Nothing But Thieves</p>
+          <p class="video-update">조회수 7.5만회 · 3년 전</p>
+        </div>
       </div>
     </div>
-  </div>
-  <!--  썸네일 리스트5-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/2-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/2-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">갯벌에 친구 1억 짜리 리자몽 카드 묻기 ㅋㅋ</p>
-        <p class="video-producer">핫소스</p>
-        <p class="video-update">조회수 32만회 · 13시간 전</p>
+    <!--  썸네일 리스트5-->
+    <div class="content" >
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/high-not.png" alt="썸네일 사진">
+      <div class="video-meta">
+        <img class="producer-img" src="Project/Home/home_img/channel_img/sub-not.jpg" alt="작성자">
+        <div class="video-info">
+          <p class="video-title">Nothing But Thieves - If I Get High (II (Visualiser))</p>
+          <p class="video-producer">Nothing But Thieves</p>
+          <p class="video-update">조회수 7.5만회 · 3년 전</p>
+        </div>
       </div>
     </div>
-  </div>
-  <!--  썸네일 리스트6-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/3-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/3-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">찐친들과 캠핑간다!! 삼겹살에 비빔면 준비해라!!!!!!!</p>
-        <p class="video-producer">파뿌리</p>
-        <p class="video-update">조회수 17만회 · 16시간 전</p>
+    <!--  썸네일 리스트6-->
+    <div class="content" >
+      <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/glow-nell.png" alt="썸네일 사진">
+      <div class="video-meta">
+        <img class="producer-img" src="Project/Home/home_img/channel_img/sub-nell.jpg" alt="작성자">
+        <div class="video-info">
+          <p class="video-title">넬(NELL) 'Glow in the dark' Official MV</p>
+          <p class="video-producer">OFFICIAL_NELL</p>
+          <p class="video-update">조회수 7.9만회 · 4년 전</p>
+        </div>
       </div>
     </div>
-  </div>
-  <!--  썸네일 리스트7-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/1-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/1-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">무효!!!!!!!!</p>
-        <p class="video-producer">랄로</p>
-        <p class="video-update">조회수 48만회 · 12시간 전</p>
-      </div>
-    </div>
-  </div>
-  <!--  썸네일 리스트8-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/2-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/2-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">갯벌에 친구 1억 짜리 리자몽 카드 묻기 ㅋㅋ</p>
-        <p class="video-producer">핫소스</p>
-        <p class="video-update">조회수 32만회 · 13시간 전</p>
-      </div>
-    </div>
-  </div>
-  <!--  썸네일 리스트9-->
-  <div class="content">
-    <img class="thumbnail" src="Project/Home/home_img/thumbnail_img/3-s.png" alt="썸네일 사진">
-    <div class="video-meta">
-      <img class="producer-img" src="Project/Home/home_img/channel_img/3-s.jpg" alt="작성자">
-      <div class="video-info">
-        <p class="video-title">찐친들과 캠핑간다!! 삼겹살에 비빔면 준비해라!!!!!!!</p>
-        <p class="video-producer">파뿌리</p>
-        <p class="video-update">조회수 17만회 · 16시간 전</p>
-      </div>
-    </div>
-  </div>
+
+<!--  &lt;!&ndash;  관리 버튼 활성화&ndash;&gt;-->
+<!--  <div id="subcontent2">-->
+<!--    &lt;!&ndash;  구독 1&ndash;&gt;-->
+<!--    <div class="subpage-content">-->
+<!--      <div class="subpage-left">-->
+<!--        <img src="Project/Home/home_img/channel_img/sub-bring.jpg" alt="">-->
+<!--        <div class="subpage-ep">-->
+<!--          <h5>Bring Me the Horizon</h5>-->
+<!--          <p>@BringMeTheHorizon•구독자 473만명</p>-->
+<!--          <p>Lo-files out now https://bmth.co/lo-files</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="subpage-right">-->
+<!--        <button><i class="fa-regular fa-bell"></i>&nbsp;&nbsp; 구독중&nbsp;&nbsp; <i class="fa-solid fa-chevron-down"></i></button>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;  구독 2&ndash;&gt;-->
+<!--    <div class="subpage-content">-->
+<!--      <div class="subpage-left">-->
+<!--        <img src="Project/Home/home_img/channel_img/sub-nell.jpg" alt="">-->
+<!--        <div class="subpage-ep">-->
+<!--          <h5>OFFICIAL_NELL</h5>-->
+<!--          <p>@SPACEBOHEMIAN•구독자 9.74만명</p>-->
+<!--          <p>NELL OFFICIAL CHANNEL</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="subpage-right">-->
+<!--        <button><i class="fa-regular fa-bell"></i>&nbsp;&nbsp; 구독중&nbsp;&nbsp; <i class="fa-solid fa-chevron-down"></i></button>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash;  구독 2&ndash;&gt;-->
+<!--    <div class="subpage-content">-->
+<!--      <div class="subpage-left">-->
+<!--        <img src="Project/Home/home_img/channel_img/sub-not.jpg" alt="">-->
+<!--        <div class="subpage-ep">-->
+<!--          <h5>Nothing But Thieves</h5>-->
+<!--          <p>@NothingButThieves•구독자 66.1만명</p>-->
+<!--          <p>:: Dead Club City (Extended Deluxe) out now https://nbthiev.es/DCCExtendedAY ::</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="subpage-right">-->
+<!--        <button><i class="fa-regular fa-bell"></i>&nbsp;&nbsp; 구독중&nbsp;&nbsp; <i class="fa-solid fa-chevron-down"></i></button>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 </main>
+
+<script src="Project/Home/js/home.js"></script>
 </body>
 </html>
